--- a/client/src/scss/mainWindow.scss
+++ b/client/src/scss/mainWindow.scss
@@ -33,13 +33,35 @@ body {
 	height: 150px;
 }
 .wrapper {
-	background-image: url(../assets/img/Rectangle.jpg);
+	background-image: url(../assets/img/abobus123.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-
+	&__block-black {
+		display: none;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100vw;
+		height: 100vh;
+		background-color: #000;
+		opacity: 0.4;
+	}
+	&__block-black.active {
+		display: block;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100vw;
+		height: 100vh;
+		background-color: #000;
+		opacity: 0.4;
+	}
 	&__auth {
 		position: fixed;
 		right: 50px;
