--- a/client/src/scss/modalComponent.scss
+++ b/client/src/scss/modalComponent.scss
@@ -19,5 +19,18 @@
 		background-color: white;
 		height: 300px;
 		width: 600px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	&-text {
+		display: flex;
+		width: 400px;
+		height: 200px;
+		border-radius: 12px;
+		border: 2px solid #000;
+		align-items: center;
+		justify-content: center;
 	}
 }
