--- a/client/src/scss/mainWindow.scss
+++ b/client/src/scss/mainWindow.scss
@@ -80,6 +80,24 @@ body {
 			margin-left: 9px;
 		}
 	}
+	&__create {
+		position: fixed;
+		right: 50px;
+		top: 105px;
+		padding: 16px 52px;
+		background-color: #fff;
+		box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+		border-radius: 4px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		a {
+			color: #424551;
+			font-weight: 700;
+			font-size: 16px;
+			margin-left: 9px;
+		}
+	}
 	&__btn {
 		position: absolute;
 		padding: 10px 5px;
@@ -91,10 +109,10 @@ body {
 		transition: all 0.3s ease-in;
 		cursor: pointer;
 		&.active {
-			transform: translateX(1647%);
+			transform: translateX(2305%);
 		}
 		img {
-			width: 25px;
+			width: 15px;
 			display: inline-block;
 		}
 	}
