--- a/client/src/scss/menu.scss
+++ b/client/src/scss/menu.scss
@@ -10,9 +10,8 @@
 	.button__div {
 		position: absolute;
 		right: 50px;
-		padding: 13px 0px;
 		width: 50px;
-		height: 45px;
+		top: 20px;
 		background-color: #9d3fe7;
 		font-size: 14px;
 		line-height: 23px;
@@ -73,11 +72,11 @@
 			background-color: #9d3fe7;
 			font-size: 18px;
 			line-height: 23px;
-			border-radius: 4px;
+			border-radius: 12px;
 			color: #fff;
 			transition: all 0.3s ease-in;
 			&:hover {
-				transform: scale(1.015);
+				transform: translateX(20px);
 			}
 		}
 	}
