--- a/client/src/scss/bus.scss
+++ b/client/src/scss/bus.scss
@@ -2,6 +2,11 @@
 	box-sizing: border-box;
 }
 
+html {
+	width: 100%;
+	height: 100%;
+}
+
 a {
 	text-decoration: none;
 	display: inline-block;
@@ -26,9 +31,15 @@ body {
 	font-family: "Lato", sans-serif;
 	color: #424551;
 	font-size: 14px;
+	height: 100%;
+	background-color: #f8f1fe;
 }
 
 .bus {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	&__inner {
 		display: flex;
 		.bus__title {
@@ -37,6 +48,8 @@ body {
 			color: #fff;
 			text-align: center;
 			background-color: #9d3fe7;
+			border-radius: 10px;
+			margin-top: 10px;
 		}
 		.bus__table {
 			td {
@@ -56,22 +69,26 @@ body {
 
 table {
 	width: 100%;
-	border-collapse: collapse;
+	border-collapse: separate;
+	border-spacing: 2px;
 }
-table thead tr {
+table thead {
 	color: #ffffff;
 	font-weight: bold;
-	background: #9d3fe7;
+	background: #d39cfe;
 }
 table thead tr td {
 	border: 1px solid #9d3fe7;
+	border-radius: 10px;
 }
 table tbody tr td {
 	border: 1px solid #e8e9eb;
+	border-radius: 10px;
 }
 table tbody tr:nth-child(2n) {
 	background: #f4f4f4;
 }
 table tbody tr:hover {
 	background: #ebffe8;
+	cursor: pointer;
 }
