--- a/client/src/scss/menu.scss
+++ b/client/src/scss/menu.scss
@@ -9,9 +9,9 @@
 
 	.button__div {
 		position: absolute;
-		right: 50px;
+		right: 20px;
 		width: 50px;
-		top: 20px;
+		top: 70px;
 		background-color: #9d3fe7;
 		font-size: 14px;
 		line-height: 23px;
@@ -32,16 +32,21 @@
 	}
 	&-Uplevel {
 		display: flex;
-		padding: 17px 0px 24px 0px;
+		padding: 17px 22px 24px 0px;
+		justify-content: space-between;
 		align-items: center;
 		input[type="text"] {
-			width: 330px;
+			width: 100%;
 			height: 44px;
 			border: 1px solid #e5e0eb;
 			border-radius: 2px;
 			background: #ffffff;
 			outline: none;
 		}
+	}
+
+	&-form {
+		width: 100%;
 	}
 
 	&-content {
@@ -66,8 +71,8 @@
 	&-routes {
 		.wrapper__menu-btn {
 			display: inline-block;
-			padding: 13px 0px;
-			width: 220px;
+			padding: 5px 0px;
+			width: 130px;
 			margin: 5px;
 			background-color: #9d3fe7;
 			font-size: 18px;
